    - [mips*el/loongson*] LOONGSON64 replaced LOONGSON
    - [x86] COMEDI_8255_SA replaced COMEDI_8255
  * [sparc] Remove linux-image, linux-header and udeb packages, as they
    are redundant with sparc64 and neither is an official port
  * Fix last issue that prevents a reproducible build (Closes: #769844):
    - DocBook: Use a fixed encoding for output

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 25 Aug 2015 18:50:57 +0100

linux (4.2~rc8-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Aurelien Jarno ]
  * [mips*] Build ext4 as module. Add core-modules and ext4-modules udeb.
    Fixes FTBFS.
  * [mips,mips64] Remove r4k-ip22, r5k-ip32 and sb1-bcm91250a flavours.
  * [mipsel,mips64el] Remove sb1-bcm91250a flavour.

  [ Ben Hutchings ]
  * debian/control: Correct build-dependency on xz-utils, needed on all arches
  * Fix more issues that prevent a reproducible build:
    - Set LC_ALL=C.UTF-8
    - Avoid creating man pages in source tree

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 24 Aug 2015 12:00:54 +0100

linux (4.2~rc6-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * Adjust for migration to git:
    - Update .gitignore files
    - debian/control: Update Vcs-* fields
    - README.Debian, README.source: Update references to svn
  * [rt] Disable until it is updated for 4.2 or later
  * debian/control: Drop Frederik Schüler from Uploaders

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 12 Aug 2015 20:48:00 +0200

linux (4.1.6-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.1.6
    - [mips*/*-malta] Don't reinitialise RTC (regression in 3.14)
    - [mips*] Make set_pte() SMP safe.
    - fsnotify: fix oops in fsnotify_clear_marks_by_group_flags()
    - [x86] drm/i915: Declare the swizzling unknown for L-shaped configurations
    - [x86] drm/i915: Replace WARN inside I915_READ64_2x32 with retry loop