@@ -1,5 +1,4 @@
 import codecs
-import six
 from collections import OrderedDict
 
 from .debian import *
@@ -141,7 +140,7 @@ class Gencontrol(object):
             cmds = []
             for i in extra_arches[arch]:
                 cmds.append("$(MAKE) -f debian/rules.real install-dummy ARCH='%s' DH_OPTIONS='-p%s'" % (arch, i['Package']))
-            makefile.add('binary-arch_%s' % arch, [u'binary-arch_%s_extra' % arch])
+            makefile.add('binary-arch_%s' % arch, ['binary-arch_%s_extra' % arch])
             makefile.add("binary-arch_%s_extra" % arch, cmds = cmds)
 
     def do_arch(self, packages, makefile, arch, vars, makeflags, extra):
@@ -275,7 +274,7 @@ class Gencontrol(object):
         def subst(match):
             return vars[match.group(1)]
 
-        return re.sub(r'@([-_a-z0-9]+)@', subst, six.text_type(s))
+        return re.sub(r'@([-_a-z0-9]+)@', subst, str(s))
 
     def write(self, packages, makefile):
         self.write_control(packages.values())
@@ -298,4 +297,4 @@ class Gencontrol(object):
         for entry in list:
             for key, value in entry.iteritems():
                 f.write(u"%s: %s\n" % (key, value))
-            f.write(u'\n')
+            f.write('\n')
