@@ -3,7 +3,7 @@ Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Bastian Blank <waldi@debian.org>, maximilian attems <maks@debian.org>, Ben Hutchings <ben@decadent.org.uk>
 Standards-Version: 3.9.5
-Build-Depends: debhelper, cpio, kmod, python, python-six, xz-utils, kernel-wedge, quilt, patchutils, bc
+Build-Depends: debhelper, cpio, kmod, python3, xz-utils, kernel-wedge, quilt, patchutils, bc
 Build-Depends-Indep: xmlto
 Vcs-Git: https://anonscm.debian.org/git/kernel/linux.git
 Vcs-Browser: https://anonscm.debian.org/cgit/kernel/linux.git
